// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModifierItem /> should render correctly color modifier 1`] = `
<div
  className="wrapper"
>
  <div
    className="adornment color"
    style={
      {
        "backgroundColor": "#451289",
      }
    }
  />
  <div
    className="info"
  >
    <span
      className="name"
    >
      modifier for test
    </span>
    <Price
      className="price"
      currencyGrapheme="$"
      value={745}
    />
  </div>
  <div
    className="icon-wrapper"
  />
</div>
`;

exports[`<ModifierItem /> should render correctly default text type modifier 1`] = `
<div
  className="wrapper"
>
  <div
    className="info"
  >
    <span
      className="name"
    >
      modifier for test
    </span>
    <Price
      className="price"
      currencyGrapheme="$"
      value={745}
    />
  </div>
  <div
    className="icon-wrapper"
  />
</div>
`;

exports[`<ModifierItem /> should render correctly image modifier 1`] = `
<div
  className="wrapper"
>
  <img
    alt="modifier for test"
    className="adornment"
    src="https://test.com/140.jpg?v=0"
  />
  <div
    className="info"
  >
    <span
      className="name"
    >
      modifier for test
    </span>
    <Price
      className="price"
      currencyGrapheme="$"
      value={745}
    />
  </div>
  <div
    className="icon-wrapper"
  />
</div>
`;

exports[`<ModifierItem /> should render correctly with additionalText and selected 1`] = `
<div
  className="wrapper selected"
>
  <div
    className="info"
  >
    <span
      className="name"
    >
      modifier for test
    </span>
    <Price
      className="price additional"
      currencyGrapheme="$"
      value={745}
    />
    <Memo(ForwardRef(Text))
      color="basic-gray38"
      lineHeight={16}
      size={12}
    >
      В корзине 5 шт
    </Memo(ForwardRef(Text))>
  </div>
  <div
    className="icon-wrapper"
  >
    <div
      className="icon"
    >
      <ForwardRef(CheckSVG)
        fill="#fff"
        role="presentation"
      />
    </div>
  </div>
</div>
`;

exports[`<ModifierItem /> should render correctly without props 1`] = `
<div
  className="wrapper"
>
  <div
    className="info"
  >
    <span
      className="name"
    />
  </div>
  <div
    className="icon-wrapper"
  />
</div>
`;
